--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Accordion</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    <h1 class="title-text">Аккордеон на чистом CSS</h1>
-    <div class="slide">
-        <ul class="accordion">
-            <li><img src="img\1.jpg" class="slide-img"></li>
-            <li><img src="img\2.jpg" class="slide-img"></li>
-            <li><img src="img\3.jpg" class="slide-img"></li>
-            <li><img src="img\4.jpg" class="slide-img"></li>
-            <li><img src="img\5.jpg" class="slide-img"></li>
-            <li><img src="img\6.jpg" class="slide-img"></li>
-            <li><img src="img\7.jpg" class="slide-img"></li>
+    <h1 class="title-text-acc">Accordion Pure CSS</h1>
+    <div class="accordion-wrapper">
+        <ul class="accordion-stuff">
+            <li><img src="img\1.jpg" class="accordion-img"></li>
+            <li><img src="img\2.jpg" class="accordion-img"></li>
+            <li><img src="img\3.jpg" class="accordion-img"></li>
+            <li><img src="img\4.jpg" class="accordion-img"></li>
+            <li><img src="img\5.jpg" class="accordion-img"></li>
+            <li><img src="img\6.jpg" class="accordion-img"></li>
+            <li><img src="img\7.jpg" class="accordion-img"></li>
         </ul>
     </div>
